--- a/gpt2-generator-larger.ipynb
+++ b/gpt2-generator-larger.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\Christian Gauthier\\miniconda3\\envs\\tf\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "All model checkpoint layers were used when initializing TFGPT2LMHeadModel.\n",
       "\n",
       "All the layers of TFGPT2LMHeadModel were initialized from the model checkpoint at gpt2.\n",
@@ -30,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_27408\\3859494564.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\Christian Gauthier\\AppData\\Local\\Temp\\ipykernel_24876\\3859494564.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  reviews['text'].str.replace('[^\\w\\s]','') #Remove punctuation\n"
      ]
     },
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +140,8 @@
     "  # Initialize empty lists for inputs and labels\n",
     "  inputs, labels = [], [] \n",
     "\n",
-    "  # For each example in the examples list,\n",
-    "  # store input as the example without the last element\n",
-    "  # store the label as the example without the first element\n",
+    "  # For each review in the ist, store the input as the example without the last part\n",
+    "  # store the label as the review without the first part\n",
     "  for ex in examples:\n",
     "    inputs.append(ex[:-1])\n",
     "    labels.append(ex[1:])\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1837,7 +1838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1862,7 @@
     "  num_beams = 5,\n",
     "  temperature = 0.75,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
     "\n",
@@ -1872,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1896,7 +1897,7 @@
     "  num_beams = 5,\n",
     "  temperature = 0.65,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
     "\n",
@@ -1907,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1932,7 +1933,7 @@
     "  num_beams = 5,\n",
     "  temperature = 0.55,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
     "\n",
@@ -1963,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1988,7 @@
     "  num_beams = 5,\n",
     "  temperature = 0.75,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
     "\n",
@@ -2023,7 +2024,7 @@
     "  num_beams = 5,\n",
     "  temperature = 0.65,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
     "\n",
@@ -2058,7 +2059,7 @@
     "  num_beams = 5,\n",
     "  temperature = 0.55,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
     "\n",
@@ -2069,16 +2070,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "love going here for lunch or dinner. the food is always fresh and the service is great. i've never had a bad meal here. it's a great place to go with a large group of people.i've been here a few times now and i have to say that i love this place.  the staff is very friendly and they have a good selection of beer on tap.\n",
-      "\n",
-      "the beer selection is pretty good, and there are a lot of different styles to choose from, even if you can be sure to make your typical of all of which is the usual, as well known for any of beers on draft list of brewsaufrostedible, but i would beets plus they also, including the right now.\n"
+      "love going here for lunch or dinner. the food is always great and the staff is very friendly. i've never had a bad meal here. it's a great place to meet up with friends and have a good time.i've been here a few times now and i have to say this is one of my favorite places to go when i'm in the mood for sushi.  the sushi is fresh and delicious, the service is fast and friendly, and you can't beat the price!  if you pay for the hibsushi your paying for all you get a little bit more than $10 bucks county mall! i would recommend this place is pretty much better than any of course is a lotionfantastic! the quality of\n"
      ]
     }
    ],
@@ -2090,12 +2089,254 @@
     "output = model.generate(\n",
     "  input_ids,\n",
     "  max_length = 150,\n",
-    "  num_beams = 5,\n",
+    "  num_beams = 12,\n",
     "  temperature = 0.55,\n",
     "  no_repeat_ngram_size=2,\n",
-    "  num_return_sequences=5\n",
+    "  num_return_sequences=1\n",
     ")\n",
     "outputed = tokenizer.decode(output[0])\n",
+    "print(outputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is one of my favorite restaurants in st. louis. i've been coming here for years and it never disappoints. the food is always fresh and delicious, the service is fast and friendly, and the prices are very reasonable for the amount of food you get. \n",
+      "\n",
+      "i've never had a bad meal here. it's a great place to go if you're in the mood for something different, but don't want to spend a lot of money on a sub-par meal or overpriced food.i love affair with nothing toasted ravioli wasabi fordressed and over priced burgers. this place is what ihopedible food, greasy spanish or mediocre at all american\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"this\"\n",
+    "# encoding the input text\n",
+    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
+    "# getting out output\n",
+    "output = model.generate(\n",
+    "  input_ids,\n",
+    "  max_length = 145,\n",
+    "  num_beams = 12,\n",
+    "  temperature = 0.55,\n",
+    "  no_repeat_ngram_size=2,\n",
+    "  num_return_sequences=1\n",
+    ")\n",
+    "outputed = tokenizer.decode(output[0])\n",
+    "print(outputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrible customer service. i called to make an appointment for a pedicure and was told i would have to wait an hour to be seen. when i got there, there was no one in front of me. the receptionist was very rude and unprofessional. she asked me if i wanted a mani/pedi and i said no because it was my first time there and she said \"i don't know what i want.\" i told her that i didn't want to spend more than a lot of my money and that much time in the money on my time on the manicure, but i just to get a manicures, she looked at least 3 hours of money, i needed to come back and\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"terrible\"\n",
+    "# encoding the input text\n",
+    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
+    "# getting out output\n",
+    "output = model.generate(\n",
+    "  input_ids,\n",
+    "  max_length = 145,\n",
+    "  num_beams = 12,\n",
+    "  temperature = 0.55,\n",
+    "  no_repeat_ngram_size=2,\n",
+    "  num_return_sequences=1\n",
+    ")\n",
+    "outputed = tokenizer.decode(output[0])\n",
+    "print(outputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelcompile(model)\n",
+    "model.load_weights('tmp\\weights.02.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Token indices sequence length is longer than the specified maximum sequence length for this model (32109083 > 1024). Running this sequence through the model will result in indexing errors\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = datasetCreate(stringify_tokenize(dfl1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "26757/26757 [==============================] - 4965s 185ms/step - loss: 2.8884 - accuracy: 0.3874\n",
+      "Epoch 2/5\n",
+      "26757/26757 [==============================] - 4794s 179ms/step - loss: 2.8570 - accuracy: 0.3907\n",
+      "Epoch 3/5\n",
+      "26757/26757 [==============================] - 4763s 178ms/step - loss: 2.8311 - accuracy: 0.3936\n",
+      "Epoch 4/5\n",
+      "26757/26757 [==============================] - 4769s 178ms/step - loss: 2.8077 - accuracy: 0.3962\n",
+      "Epoch 5/5\n",
+      "26757/26757 [==============================] - 4765s 178ms/step - loss: 2.7860 - accuracy: 0.3986\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(dataset,epochs=5,callbacks=[model_checkpoint_callback])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "26757/26757 [==============================] - 4906s 183ms/step - loss: 2.7657 - accuracy: 0.4010\n",
+      "Epoch 2/2\n",
+      "26757/26757 [==============================] - 4770s 178ms/step - loss: 2.7468 - accuracy: 0.4032\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(dataset,epochs=2,callbacks=[model_checkpoint_callback])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this place is great! i've been here a few times and it's always a great experience. the staff is very friendly and the food is always fresh and delicious. i would recommend this place to anyone who wants to get some good mexican food in the tampa bay area.i have been going to this nail salon since i moved to the area a couple of years ago.  i have never had a bad manicure or pedicure and have always been happy with the quality of the work done by the service and attention to last time. they use of my nails.\n",
+      "\n",
+      "imy nail techspture/personality and cleanliness of their work they do not so far removed from what i amellebtwice shave ice creaminess of workmanship. every time i always excellent customer service is consistent quality work that i'm not being servicing and care for the price, but i never been there are done here!\n",
+      "thegelato's presentions to\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"this place\"\n",
+    "# encoding the input text\n",
+    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
+    "# getting out output\n",
+    "output = model.generate(\n",
+    "  input_ids,\n",
+    "  max_length = 200,\n",
+    "  num_beams = 12,\n",
+    "  temperature = 0.75,\n",
+    "  no_repeat_ngram_size=2,\n",
+    "  num_return_sequences=1\n",
+    ")\n",
+    "outputed = tokenizer.decode(output[0])\n",
+    "\n",
+    "outputed.strip() #Remove whitespace\n",
+    "outputed.replace(\"\\n\", \" \") #Remove escape characters\n",
+    "print(outputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i found this place on yelp and decided to give it a try. i'm so glad i did. the food was delicious and the service was great. my only complaint is that i wish they had a gluten-free bun option, but that's not a big deal to me. overall, it was a great experience and i will definitely be going back.i've been here a few times now and have to say that it is one of the best sushi places i've ever been to. \n",
+      "the sushi restaurants in st louisnashville. this side by far in my favorite sushi bar none of which is arizona.\n",
+      "\n",
+      "if you can get in flor anywhere in indianapolis of any of all around here in tampa bay area of my entire year old city centreived in the sushi rolls and that hasn't to date with a hundred miles from st petite twenty miles away from the quality food is probably the fishtown. it's ever had.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"i found\"\n",
+    "# encoding the input text\n",
+    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
+    "# getting out output\n",
+    "output = model.generate(\n",
+    "  input_ids,\n",
+    "  max_length = 200,\n",
+    "  num_beams = 13,\n",
+    "  temperature = 0.65,\n",
+    "  no_repeat_ngram_size=2,\n",
+    "  num_return_sequences=1\n",
+    ")\n",
+    "outputed = tokenizer.decode(output[0])\n",
+    "\n",
+    "outputed.strip() #Remove whitespace\n",
+    "outputed.replace(\"\\n\", \" \") #Remove escape characters\n",
+    "print(outputed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "never again.i've been here a few times now and i have to say that it is one of the best sushi places i've ever been to. the fish is always fresh and the service is great. \n",
+      "\n",
+      "if you're looking for a good sushi place, this is not the place for you. but if you want great sushi at a great price, you won't be disappointed.this is my favorite place to go when i'm in the mood for mexican and don't want to splur tilapart from calif i crave longwood right now. it's not to get tired of any type of all overpriced food. they have time. i love italian food is just chill out of asian food and\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"never again\"\n",
+    "# encoding the input text\n",
+    "input_ids = tokenizer.encode(text, return_tensors='tf')\n",
+    "# getting out output\n",
+    "output = model.generate(\n",
+    "  input_ids,\n",
+    "  max_length = 150,\n",
+    "  num_beams = 12,\n",
+    "  temperature = 0.55,\n",
+    "  no_repeat_ngram_size=2,\n",
+    "  num_return_sequences=1\n",
+    ")\n",
+    "outputed = tokenizer.decode(output[0])\n",
+    "\n",
+    "outputed.strip() #Remove whitespace\n",
+    "outputed.replace(\"\\n\", \" \") #Remove escape characters\n",
     "print(outputed)"
    ]
   }
