--- a/gpt2-generator-larger.ipynb
+++ b/gpt2-generator-larger.ipynb
@@ -2920,21 +2920,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'reviews' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcsv\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mstring\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m reviews25k \u001b[39m=\u001b[39m reviews[:\u001b[39m25000\u001b[39m]\n\u001b[0;32m      6\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mextract3word\u001b[39m(reviews, output_filename):\n\u001b[0;32m      7\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(output_filename, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m, newline\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m output_csv_file:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'reviews' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "modelcompile(model)\n",
+    "model.load_weights('tmp3\\weights.02.h5') #Rework of large train model before issues with context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import csv\n",
     "import string\n",
@@ -2945,7 +2943,7 @@
     "    with open(output_filename, 'w', newline='') as output_csv_file:\n",
     "        output_writer = csv.writer(output_csv_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "        for row in reviews:\n",
-    "            row = row.lower()   e\n",
+    "            row = row.lower()   \n",
     "            row.replace('[^\\w\\s]','') \n",
     "            row.strip() \n",
     "            row.replace(\"\\n\", \" \") \n",
@@ -2964,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3001,7 +2999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3108,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3118,11 +3116,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "three500 = threewords[3000:3500]\n",
+    "generationMachine(three500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three500 = threewords[3500:4000]\n",
+    "generationMachine(three500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three500 = threewords[4000:5000]\n",
+    "generationMachine(three500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three500 = threewords[5000:6000]\n",
+    "generationMachine(three500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three500 = threewords[6000:6500]\n",
+    "generationMachine(three500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "three500 = threewords[6500:7500]\n",
     "generationMachine(three500)"
    ]
   }
